-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.1, 6.6.2, 6.7.0, 6.8.0 FF
-
None
-
-
5b3345d37 (dev), f725d348d (6.7), b31ece2a6 (6.6), c68a27f5b (tqtc/lts-6.5)
Hi. title is the bug
play a long video or stream with media player to reproduce.
Also, I figured out those states of 'QMediaPlayer::MediaStatus' that are related to 'bufferProgress' not working properly.
never reaches to console.log line.
MediaPlayer {
id : pl
audioOutput: audioOutput
videoOutput: videoOutput
onBufferProgressChanged: {
console.log("bufferProgress ", pl.bufferProgress)
}
}
For Gerrit Dashboard: QTBUG-122706 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
543849,2 | Emit signal bufferProgressChanged | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
543996,2 | Emit signal bufferProgressChanged | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
544069,2 | Emit signal bufferProgressChanged | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
544103,2 | Emit signal bufferProgressChanged | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |