Emit signal bufferProgressChanged

The signal was not emitted upon changing.
Note, currently emitting intermediate progress values is not
accurate (only 0.25). To be fixed in the future.

Fixes: QTBUG-122706
Pick-to: 6.5
Change-Id: Iae948ef6d0b27d7ece10112b91d240d0a5d71938
Reviewed-by: Lars Sutterud <lars.sutterud@qt.io>
Reviewed-by: Pavel Dubsky <pavel.dubsky@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 5b3345d3750f3812ad7fafde39d60a9123c890eb)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit f725d348d354efb993c95a2c4fb0c2e8a2a9b5d2)